parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LET

Grammar

Rule 0     S' -> s
Rule 1     s -> block
Rule 2     block -> block instruccion
Rule 3     block -> instruccion
Rule 4     instruccion -> print
Rule 5     instruccion -> ifinstruction
Rule 6     instruccion -> forinstruction
Rule 7     instruccion -> switchinstruction
Rule 8     instruccion -> whileinstruction
Rule 9     instruccion -> declaration
Rule 10    instruccion -> arraydeclaration
Rule 11    instruccion -> assignment
Rule 12    instruccion -> assignmentsuma
Rule 13    instruccion -> assignmentresta
Rule 14    instruccion -> breakstmt
Rule 15    instruccion -> continuestmt
Rule 16    instruccion -> functionstmt
Rule 17    instruccion -> call
Rule 18    instruccion -> returnstmt
Rule 19    instruccion -> toLowerinstruction
Rule 20    instruccion -> toUpperinstruction
Rule 21    instruccion -> parseintinstruction
Rule 22    instruccion -> parsefloatinstruction
Rule 23    instruccion -> pushinstruction
Rule 24    print -> CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
Rule 25    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 26    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
Rule 27    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE block
Rule 28    forinstruction -> FOR PARIZQ declaration expression PYC Recurinstruction PARDER LLAVEIZQ block LLAVEDER
Rule 29    Recurinstruction -> ID MAS MAS
Rule 30    Recurinstruction -> ID MENOS MENOS
Rule 31    switchinstruction -> SWITCH PARIZQ expression PARDER LLAVEIZQ caseinstruction LLAVEDER
Rule 32    caseinstruction -> caseinstruction caseindividual
Rule 33    caseinstruction -> caseindividual
Rule 34    caseindividual -> cases DOSPTS block BREAK PYC
Rule 35    cases -> CASE expression
Rule 36    cases -> DEFAULT
Rule 37    whileinstruction -> WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 38    declaration -> VAR ID DOSPTS type IG expression PYC
Rule 39    declaration -> VAR ID IG expression PYC
Rule 40    declaration -> CONST ID DOSPTS type IG expression PYC
Rule 41    declaration -> CONST ID IG expression PYC
Rule 42    arraydeclaration -> VAR ID DOSPTS type CORIZQ CORDER IG expression PYC
Rule 43    assignment -> ID IG expression PYC
Rule 44    assignmentsuma -> ID MAS IG expression PYC
Rule 45    assignmentresta -> ID MENOS IG expression PYC
Rule 46    returnstmt -> RETURN expression PYC
Rule 47    returnstmt -> RETURN PYC
Rule 48    call -> ID PARIZQ expressionList PARDER PYC
Rule 49    call -> ID PARIZQ PARDER PYC
Rule 50    functionstmt -> FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
Rule 51    funcparams -> PARIZQ paramsList PARDER
Rule 52    funcparams -> PARIZQ PARDER
Rule 53    paramsList -> paramsList COMA ID DOSPTS type
Rule 54    paramsList -> ID DOSPTS type
Rule 55    paramsList -> paramsList ID DOSPTS type CORIZQ CORDER
Rule 56    paramsList -> ID DOSPTS type CORIZQ CORDER
Rule 57    functype -> DOSPTS type
Rule 58    functype -> <empty>
Rule 59    breakstmt -> BREAK PYC
Rule 60    continuestmt -> CONTINUE PYC
Rule 61    toLowerinstruction -> CONST ID DOSPTS type IG ID PUNTO TOLOWER PARIZQ PARDER PYC
Rule 62    toUpperinstruction -> CONST ID DOSPTS type IG ID PUNTO TOUPPER PARIZQ PARDER PYC
Rule 63    parseintinstruction -> CONST ID DOSPTS type IG PARSEINT PARIZQ expression PARDER PYC
Rule 64    parsefloatinstruction -> CONST ID DOSPTS type IG PARSEFLOAT PARIZQ expression PARDER PYC
Rule 65    pushinstruction -> ID PUNTO PUSH PARIZQ expression PARDER PYC
Rule 66    type -> NUMBER
Rule 67    type -> FLOAT
Rule 68    type -> STRING
Rule 69    type -> CHAR
Rule 70    type -> BOOL
Rule 71    expressionList -> expressionList COMA expression
Rule 72    expressionList -> expression
Rule 73    expression -> expression MAS expression
Rule 74    expression -> expression MENOS expression
Rule 75    expression -> expression POR expression
Rule 76    expression -> expression DIVIDIDO expression
Rule 77    expression -> expression MODULO expression
Rule 78    expression -> expression MAYOR expression
Rule 79    expression -> expression MENOR expression
Rule 80    expression -> expression MAYORIG expression
Rule 81    expression -> expression MENORIG expression
Rule 82    expression -> expression IGIG expression
Rule 83    expression -> expression DIF expression
Rule 84    expression -> expression AND expression
Rule 85    expression -> expression OR expression
Rule 86    expression -> NOT expression
Rule 87    expression -> PARIZQ expression PARDER
Rule 88    expression -> expression TERN expression DOSPTS expression
Rule 89    expression -> ENTERO
Rule 90    expression -> DECIMAL
Rule 91    expression -> BOOLEANO
Rule 92    expression -> CADENA
Rule 93    expression -> CARACTER
Rule 94    expression -> listArray
Rule 95    expression -> CORIZQ expressionList CORDER
Rule 96    expression -> ID PARIZQ expressionList PARDER
Rule 97    expression -> ID PARIZQ PARDER
Rule 98    listArray -> listArray PUNTO INDEXOF PARIZQ expression PARDER
Rule 99    listArray -> listArray PUNTO POP PARIZQ PARDER
Rule 100   listArray -> listArray PUNTO JOIN PARIZQ PARDER
Rule 101   listArray -> listArray PUNTO TOSTRING PARIZQ PARDER
Rule 102   listArray -> listArray CORIZQ expression CORDER
Rule 103   listArray -> listArray PUNTO LENGTH
Rule 104   listArray -> listArray PUNTO ID
Rule 105   listArray -> ID
Rule 106   expression -> TYPEOF ID

Terminals, with rules where they appear

AND                  : 84
BOOL                 : 70
BOOLEANO             : 91
BREAK                : 34 59
CADENA               : 92
CARACTER             : 93
CASE                 : 35
CHAR                 : 69
COMA                 : 53 71
CONSOLE              : 24
CONST                : 40 41 61 62 63 64
CONTINUE             : 60
CORDER               : 42 55 56 95 102
CORIZQ               : 42 55 56 95 102
DECIMAL              : 90
DEFAULT              : 36
DIF                  : 83
DIVIDIDO             : 76
DOSPTS               : 34 38 40 42 53 54 55 56 57 61 62 63 64 88
ELSE                 : 26 27
ENTERO               : 89
FLOAT                : 67
FOR                  : 28
FUNC                 : 50
ID                   : 29 30 38 39 40 41 42 43 44 45 48 49 50 53 54 55 56 61 61 62 62 63 64 65 96 97 104 105 106
IF                   : 25 26 27
IG                   : 38 39 40 41 42 43 44 45 61 62 63 64
IGIG                 : 82
INDEXOF              : 98
JOIN                 : 100
LENGTH               : 103
LET                  : 
LLAVEDER             : 25 26 26 27 28 31 37 50
LLAVEIZQ             : 25 26 26 27 28 31 37 50
LOG                  : 24
MAS                  : 29 29 44 73
MAYOR                : 78
MAYORIG              : 80
MENOR                : 79
MENORIG              : 81
MENOS                : 30 30 45 74
MODULO               : 77
NOT                  : 86
NUMBER               : 66
OR                   : 85
PARDER               : 24 25 26 27 28 31 37 48 49 51 52 61 62 63 64 65 87 96 97 98 99 100 101
PARIZQ               : 24 25 26 27 28 31 37 48 49 51 52 61 62 63 64 65 87 96 97 98 99 100 101
PARSEFLOAT           : 64
PARSEINT             : 63
POP                  : 99
POR                  : 75
PUNTO                : 24 61 62 65 98 99 100 101 103 104
PUSH                 : 65
PYC                  : 24 28 34 38 39 40 41 42 43 44 45 46 47 48 49 59 60 61 62 63 64 65
RETURN               : 46 47
STRING               : 68
SWITCH               : 31
TERN                 : 88
TOLOWER              : 61
TOSTRING             : 101
TOUPPER              : 62
TYPEOF               : 106
VAR                  : 38 39 42
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

Recurinstruction     : 28
arraydeclaration     : 10
assignment           : 11
assignmentresta      : 13
assignmentsuma       : 12
block                : 1 2 25 26 26 27 27 28 34 37 50
breakstmt            : 14
call                 : 17
caseindividual       : 32 33
caseinstruction      : 31 32
cases                : 34
continuestmt         : 15
declaration          : 9 28
expression           : 25 26 27 28 31 35 37 38 39 40 41 42 43 44 45 46 63 64 65 71 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 87 88 88 88 98 102
expressionList       : 24 48 71 95 96
forinstruction       : 6
funcparams           : 50
functionstmt         : 16
functype             : 50
ifinstruction        : 5
instruccion          : 2 3
listArray            : 94 98 99 100 101 102 103 104
paramsList           : 51 53 55
parsefloatinstruction : 22
parseintinstruction  : 21
print                : 4
pushinstruction      : 23
returnstmt           : 18
s                    : 0
switchinstruction    : 7
toLowerinstruction   : 19
toUpperinstruction   : 20
type                 : 38 40 42 53 54 55 56 57 61 62 63 64
whileinstruction     : 8

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . block
    (2) block -> . block instruccion
    (3) block -> . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . forinstruction
    (7) instruccion -> . switchinstruction
    (8) instruccion -> . whileinstruction
    (9) instruccion -> . declaration
    (10) instruccion -> . arraydeclaration
    (11) instruccion -> . assignment
    (12) instruccion -> . assignmentsuma
    (13) instruccion -> . assignmentresta
    (14) instruccion -> . breakstmt
    (15) instruccion -> . continuestmt
    (16) instruccion -> . functionstmt
    (17) instruccion -> . call
    (18) instruccion -> . returnstmt
    (19) instruccion -> . toLowerinstruction
    (20) instruccion -> . toUpperinstruction
    (21) instruccion -> . parseintinstruction
    (22) instruccion -> . parsefloatinstruction
    (23) instruccion -> . pushinstruction
    (24) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
    (25) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (26) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
    (27) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE block
    (28) forinstruction -> . FOR PARIZQ declaration expression PYC Recurinstruction PARDER LLAVEIZQ block LLAVEDER
    (31) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ caseinstruction LLAVEDER
    (37) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (38) declaration -> . VAR ID DOSPTS type IG expression PYC
    (39) declaration -> . VAR ID IG expression PYC
    (40) declaration -> . CONST ID DOSPTS type IG expression PYC
    (41) declaration -> . CONST ID IG expression PYC
    (42) arraydeclaration -> . VAR ID DOSPTS type CORIZQ CORDER IG expression PYC
    (43) assignment -> . ID IG expression PYC
    (44) assignmentsuma -> . ID MAS IG expression PYC
    (45) assignmentresta -> . ID MENOS IG expression PYC
    (59) breakstmt -> . BREAK PYC
    (60) continuestmt -> . CONTINUE PYC
    (50) functionstmt -> . FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
    (48) call -> . ID PARIZQ expressionList PARDER PYC
    (49) call -> . ID PARIZQ PARDER PYC
    (46) returnstmt -> . RETURN expression PYC
    (47) returnstmt -> . RETURN PYC
    (61) toLowerinstruction -> . CONST ID DOSPTS type IG ID PUNTO TOLOWER PARIZQ PARDER PYC
    (62) toUpperinstruction -> . CONST ID DOSPTS type IG ID PUNTO TOUPPER PARIZQ PARDER PYC
    (63) parseintinstruction -> . CONST ID DOSPTS type IG PARSEINT PARIZQ expression PARDER PYC
    (64) parsefloatinstruction -> . CONST ID DOSPTS type IG PARSEFLOAT PARIZQ expression PARDER PYC
    (65) pushinstruction -> . ID PUNTO PUSH PARIZQ expression PARDER PYC

    CONSOLE         shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    SWITCH          shift and go to state 27
    WHILE           shift and go to state 28
    VAR             shift and go to state 29
    CONST           shift and go to state 31
    ID              shift and go to state 30
    BREAK           shift and go to state 32
    CONTINUE        shift and go to state 33
    FUNC            shift and go to state 34
    RETURN          shift and go to state 35

    s                              shift and go to state 1
    block                          shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    forinstruction                 shift and go to state 6
    switchinstruction              shift and go to state 7
    whileinstruction               shift and go to state 8
    declaration                    shift and go to state 9
    arraydeclaration               shift and go to state 10
    assignment                     shift and go to state 11
    assignmentsuma                 shift and go to state 12
    assignmentresta                shift and go to state 13
    breakstmt                      shift and go to state 14
    continuestmt                   shift and go to state 15
    functionstmt                   shift and go to state 16
    call                           shift and go to state 17
    returnstmt                     shift and go to state 18
    toLowerinstruction             shift and go to state 19
    toUpperinstruction             shift and go to state 20
    parseintinstruction            shift and go to state 21
    parsefloatinstruction          shift and go to state 22
    pushinstruction                shift and go to state 23

state 1

    (0) S' -> s .



state 2

    (1) s -> block .
    (2) block -> block . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . forinstruction
    (7) instruccion -> . switchinstruction
    (8) instruccion -> . whileinstruction
    (9) instruccion -> . declaration
    (10) instruccion -> . arraydeclaration
    (11) instruccion -> . assignment
    (12) instruccion -> . assignmentsuma
    (13) instruccion -> . assignmentresta
    (14) instruccion -> . breakstmt
    (15) instruccion -> . continuestmt
    (16) instruccion -> . functionstmt
    (17) instruccion -> . call
    (18) instruccion -> . returnstmt
    (19) instruccion -> . toLowerinstruction
    (20) instruccion -> . toUpperinstruction
    (21) instruccion -> . parseintinstruction
    (22) instruccion -> . parsefloatinstruction
    (23) instruccion -> . pushinstruction
    (24) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
    (25) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (26) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
    (27) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE block
    (28) forinstruction -> . FOR PARIZQ declaration expression PYC Recurinstruction PARDER LLAVEIZQ block LLAVEDER
    (31) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ caseinstruction LLAVEDER
    (37) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (38) declaration -> . VAR ID DOSPTS type IG expression PYC
    (39) declaration -> . VAR ID IG expression PYC
    (40) declaration -> . CONST ID DOSPTS type IG expression PYC
    (41) declaration -> . CONST ID IG expression PYC
    (42) arraydeclaration -> . VAR ID DOSPTS type CORIZQ CORDER IG expression PYC
    (43) assignment -> . ID IG expression PYC
    (44) assignmentsuma -> . ID MAS IG expression PYC
    (45) assignmentresta -> . ID MENOS IG expression PYC
    (59) breakstmt -> . BREAK PYC
    (60) continuestmt -> . CONTINUE PYC
    (50) functionstmt -> . FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
    (48) call -> . ID PARIZQ expressionList PARDER PYC
    (49) call -> . ID PARIZQ PARDER PYC
    (46) returnstmt -> . RETURN expression PYC
    (47) returnstmt -> . RETURN PYC
    (61) toLowerinstruction -> . CONST ID DOSPTS type IG ID PUNTO TOLOWER PARIZQ PARDER PYC
    (62) toUpperinstruction -> . CONST ID DOSPTS type IG ID PUNTO TOUPPER PARIZQ PARDER PYC
    (63) parseintinstruction -> . CONST ID DOSPTS type IG PARSEINT PARIZQ expression PARDER PYC
    (64) parsefloatinstruction -> . CONST ID DOSPTS type IG PARSEFLOAT PARIZQ expression PARDER PYC
    (65) pushinstruction -> . ID PUNTO PUSH PARIZQ expression PARDER PYC

    $end            reduce using rule 1 (s -> block .)
    CONSOLE         shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    SWITCH          shift and go to state 27
    WHILE           shift and go to state 28
    VAR             shift and go to state 29
    CONST           shift and go to state 31
    ID              shift and go to state 30
    BREAK           shift and go to state 32
    CONTINUE        shift and go to state 33
    FUNC            shift and go to state 34
    RETURN          shift and go to state 35

    instruccion                    shift and go to state 36
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    forinstruction                 shift and go to state 6
    switchinstruction              shift and go to state 7
    whileinstruction               shift and go to state 8
    declaration                    shift and go to state 9
    arraydeclaration               shift and go to state 10
    assignment                     shift and go to state 11
    assignmentsuma                 shift and go to state 12
    assignmentresta                shift and go to state 13
    breakstmt                      shift and go to state 14
    continuestmt                   shift and go to state 15
    functionstmt                   shift and go to state 16
    call                           shift and go to state 17
    returnstmt                     shift and go to state 18
    toLowerinstruction             shift and go to state 19
    toUpperinstruction             shift and go to state 20
    parseintinstruction            shift and go to state 21
    parsefloatinstruction          shift and go to state 22
    pushinstruction                shift and go to state 23

state 3

    (3) block -> instruccion .

    CONSOLE         reduce using rule 3 (block -> instruccion .)
    IF              reduce using rule 3 (block -> instruccion .)
    FOR             reduce using rule 3 (block -> instruccion .)
    SWITCH          reduce using rule 3 (block -> instruccion .)
    WHILE           reduce using rule 3 (block -> instruccion .)
    VAR             reduce using rule 3 (block -> instruccion .)
    CONST           reduce using rule 3 (block -> instruccion .)
    ID              reduce using rule 3 (block -> instruccion .)
    BREAK           reduce using rule 3 (block -> instruccion .)
    CONTINUE        reduce using rule 3 (block -> instruccion .)
    FUNC            reduce using rule 3 (block -> instruccion .)
    RETURN          reduce using rule 3 (block -> instruccion .)
    $end            reduce using rule 3 (block -> instruccion .)
    LLAVEDER        reduce using rule 3 (block -> instruccion .)


state 4

    (4) instruccion -> print .

    CONSOLE         reduce using rule 4 (instruccion -> print .)
    IF              reduce using rule 4 (instruccion -> print .)
    FOR             reduce using rule 4 (instruccion -> print .)
    SWITCH          reduce using rule 4 (instruccion -> print .)
    WHILE           reduce using rule 4 (instruccion -> print .)
    VAR             reduce using rule 4 (instruccion -> print .)
    CONST           reduce using rule 4 (instruccion -> print .)
    ID              reduce using rule 4 (instruccion -> print .)
    BREAK           reduce using rule 4 (instruccion -> print .)
    CONTINUE        reduce using rule 4 (instruccion -> print .)
    FUNC            reduce using rule 4 (instruccion -> print .)
    RETURN          reduce using rule 4 (instruccion -> print .)
    $end            reduce using rule 4 (instruccion -> print .)
    LLAVEDER        reduce using rule 4 (instruccion -> print .)


state 5

    (5) instruccion -> ifinstruction .

    CONSOLE         reduce using rule 5 (instruccion -> ifinstruction .)
    IF              reduce using rule 5 (instruccion -> ifinstruction .)
    FOR             reduce using rule 5 (instruccion -> ifinstruction .)
    SWITCH          reduce using rule 5 (instruccion -> ifinstruction .)
    WHILE           reduce using rule 5 (instruccion -> ifinstruction .)
    VAR             reduce using rule 5 (instruccion -> ifinstruction .)
    CONST           reduce using rule 5 (instruccion -> ifinstruction .)
    ID              reduce using rule 5 (instruccion -> ifinstruction .)
    BREAK           reduce using rule 5 (instruccion -> ifinstruction .)
    CONTINUE        reduce using rule 5 (instruccion -> ifinstruction .)
    FUNC            reduce using rule 5 (instruccion -> ifinstruction .)
    RETURN          reduce using rule 5 (instruccion -> ifinstruction .)
    $end            reduce using rule 5 (instruccion -> ifinstruction .)
    LLAVEDER        reduce using rule 5 (instruccion -> ifinstruction .)


state 6

    (6) instruccion -> forinstruction .

    CONSOLE         reduce using rule 6 (instruccion -> forinstruction .)
    IF              reduce using rule 6 (instruccion -> forinstruction .)
    FOR             reduce using rule 6 (instruccion -> forinstruction .)
    SWITCH          reduce using rule 6 (instruccion -> forinstruction .)
    WHILE           reduce using rule 6 (instruccion -> forinstruction .)
    VAR             reduce using rule 6 (instruccion -> forinstruction .)
    CONST           reduce using rule 6 (instruccion -> forinstruction .)
    ID              reduce using rule 6 (instruccion -> forinstruction .)
    BREAK           reduce using rule 6 (instruccion -> forinstruction .)
    CONTINUE        reduce using rule 6 (instruccion -> forinstruction .)
    FUNC            reduce using rule 6 (instruccion -> forinstruction .)
    RETURN          reduce using rule 6 (instruccion -> forinstruction .)
    $end            reduce using rule 6 (instruccion -> forinstruction .)
    LLAVEDER        reduce using rule 6 (instruccion -> forinstruction .)


state 7

    (7) instruccion -> switchinstruction .

    CONSOLE         reduce using rule 7 (instruccion -> switchinstruction .)
    IF              reduce using rule 7 (instruccion -> switchinstruction .)
    FOR             reduce using rule 7 (instruccion -> switchinstruction .)
    SWITCH          reduce using rule 7 (instruccion -> switchinstruction .)
    WHILE           reduce using rule 7 (instruccion -> switchinstruction .)
    VAR             reduce using rule 7 (instruccion -> switchinstruction .)
    CONST           reduce using rule 7 (instruccion -> switchinstruction .)
    ID              reduce using rule 7 (instruccion -> switchinstruction .)
    BREAK           reduce using rule 7 (instruccion -> switchinstruction .)
    CONTINUE        reduce using rule 7 (instruccion -> switchinstruction .)
    FUNC            reduce using rule 7 (instruccion -> switchinstruction .)
    RETURN          reduce using rule 7 (instruccion -> switchinstruction .)
    $end            reduce using rule 7 (instruccion -> switchinstruction .)
    LLAVEDER        reduce using rule 7 (instruccion -> switchinstruction .)


state 8

    (8) instruccion -> whileinstruction .

    CONSOLE         reduce using rule 8 (instruccion -> whileinstruction .)
    IF              reduce using rule 8 (instruccion -> whileinstruction .)
    FOR             reduce using rule 8 (instruccion -> whileinstruction .)
    SWITCH          reduce using rule 8 (instruccion -> whileinstruction .)
    WHILE           reduce using rule 8 (instruccion -> whileinstruction .)
    VAR             reduce using rule 8 (instruccion -> whileinstruction .)
    CONST           reduce using rule 8 (instruccion -> whileinstruction .)
    ID              reduce using rule 8 (instruccion -> whileinstruction .)
    BREAK           reduce using rule 8 (instruccion -> whileinstruction .)
    CONTINUE        reduce using rule 8 (instruccion -> whileinstruction .)
    FUNC            reduce using rule 8 (instruccion -> whileinstruction .)
    RETURN          reduce using rule 8 (instruccion -> whileinstruction .)
    $end            reduce using rule 8 (instruccion -> whileinstruction .)
    LLAVEDER        reduce using rule 8 (instruccion -> whileinstruction .)


state 9

    (9) instruccion -> declaration .

    CONSOLE         reduce using rule 9 (instruccion -> declaration .)
    IF              reduce using rule 9 (instruccion -> declaration .)
    FOR             reduce using rule 9 (instruccion -> declaration .)
    SWITCH          reduce using rule 9 (instruccion -> declaration .)
    WHILE           reduce using rule 9 (instruccion -> declaration .)
    VAR             reduce using rule 9 (instruccion -> declaration .)
    CONST           reduce using rule 9 (instruccion -> declaration .)
    ID              reduce using rule 9 (instruccion -> declaration .)
    BREAK           reduce using rule 9 (instruccion -> declaration .)
    CONTINUE        reduce using rule 9 (instruccion -> declaration .)
    FUNC            reduce using rule 9 (instruccion -> declaration .)
    RETURN          reduce using rule 9 (instruccion -> declaration .)
    $end            reduce using rule 9 (instruccion -> declaration .)
    LLAVEDER        reduce using rule 9 (instruccion -> declaration .)


state 10

    (10) instruccion -> arraydeclaration .

    CONSOLE         reduce using rule 10 (instruccion -> arraydeclaration .)
    IF              reduce using rule 10 (instruccion -> arraydeclaration .)
    FOR             reduce using rule 10 (instruccion -> arraydeclaration .)
    SWITCH          reduce using rule 10 (instruccion -> arraydeclaration .)
    WHILE           reduce using rule 10 (instruccion -> arraydeclaration .)
    VAR             reduce using rule 10 (instruccion -> arraydeclaration .)
    CONST           reduce using rule 10 (instruccion -> arraydeclaration .)
    ID              reduce using rule 10 (instruccion -> arraydeclaration .)
    BREAK           reduce using rule 10 (instruccion -> arraydeclaration .)
    CONTINUE        reduce using rule 10 (instruccion -> arraydeclaration .)
    FUNC            reduce using rule 10 (instruccion -> arraydeclaration .)
    RETURN          reduce using rule 10 (instruccion -> arraydeclaration .)
    $end            reduce using rule 10 (instruccion -> arraydeclaration .)
    LLAVEDER        reduce using rule 10 (instruccion -> arraydeclaration .)


state 11

    (11) instruccion -> assignment .

    CONSOLE         reduce using rule 11 (instruccion -> assignment .)
    IF              reduce using rule 11 (instruccion -> assignment .)
    FOR             reduce using rule 11 (instruccion -> assignment .)
    SWITCH          reduce using rule 11 (instruccion -> assignment .)
    WHILE           reduce using rule 11 (instruccion -> assignment .)
    VAR             reduce using rule 11 (instruccion -> assignment .)
    CONST           reduce using rule 11 (instruccion -> assignment .)
    ID              reduce using rule 11 (instruccion -> assignment .)
    BREAK           reduce using rule 11 (instruccion -> assignment .)
    CONTINUE        reduce using rule 11 (instruccion -> assignment .)
    FUNC            reduce using rule 11 (instruccion -> assignment .)
    RETURN          reduce using rule 11 (instruccion -> assignment .)
    $end            reduce using rule 11 (instruccion -> assignment .)
    LLAVEDER        reduce using rule 11 (instruccion -> assignment .)


state 12

    (12) instruccion -> assignmentsuma .

    CONSOLE         reduce using rule 12 (instruccion -> assignmentsuma .)
    IF              reduce using rule 12 (instruccion -> assignmentsuma .)
    FOR             reduce using rule 12 (instruccion -> assignmentsuma .)
    SWITCH          reduce using rule 12 (instruccion -> assignmentsuma .)
    WHILE           reduce using rule 12 (instruccion -> assignmentsuma .)
    VAR             reduce using rule 12 (instruccion -> assignmentsuma .)
    CONST           reduce using rule 12 (instruccion -> assignmentsuma .)
    ID              reduce using rule 12 (instruccion -> assignmentsuma .)
    BREAK           reduce using rule 12 (instruccion -> assignmentsuma .)
    CONTINUE        reduce using rule 12 (instruccion -> assignmentsuma .)
    FUNC            reduce using rule 12 (instruccion -> assignmentsuma .)
    RETURN          reduce using rule 12 (instruccion -> assignmentsuma .)
    $end            reduce using rule 12 (instruccion -> assignmentsuma .)
    LLAVEDER        reduce using rule 12 (instruccion -> assignmentsuma .)


state 13

    (13) instruccion -> assignmentresta .

    CONSOLE         reduce using rule 13 (instruccion -> assignmentresta .)
    IF              reduce using rule 13 (instruccion -> assignmentresta .)
    FOR             reduce using rule 13 (instruccion -> assignmentresta .)
    SWITCH          reduce using rule 13 (instruccion -> assignmentresta .)
    WHILE           reduce using rule 13 (instruccion -> assignmentresta .)
    VAR             reduce using rule 13 (instruccion -> assignmentresta .)
    CONST           reduce using rule 13 (instruccion -> assignmentresta .)
    ID              reduce using rule 13 (instruccion -> assignmentresta .)
    BREAK           reduce using rule 13 (instruccion -> assignmentresta .)
    CONTINUE        reduce using rule 13 (instruccion -> assignmentresta .)
    FUNC            reduce using rule 13 (instruccion -> assignmentresta .)
    RETURN          reduce using rule 13 (instruccion -> assignmentresta .)
    $end            reduce using rule 13 (instruccion -> assignmentresta .)
    LLAVEDER        reduce using rule 13 (instruccion -> assignmentresta .)


state 14

    (14) instruccion -> breakstmt .

    CONSOLE         reduce using rule 14 (instruccion -> breakstmt .)
    IF              reduce using rule 14 (instruccion -> breakstmt .)
    FOR             reduce using rule 14 (instruccion -> breakstmt .)
    SWITCH          reduce using rule 14 (instruccion -> breakstmt .)
    WHILE           reduce using rule 14 (instruccion -> breakstmt .)
    VAR             reduce using rule 14 (instruccion -> breakstmt .)
    CONST           reduce using rule 14 (instruccion -> breakstmt .)
    ID              reduce using rule 14 (instruccion -> breakstmt .)
    BREAK           reduce using rule 14 (instruccion -> breakstmt .)
    CONTINUE        reduce using rule 14 (instruccion -> breakstmt .)
    FUNC            reduce using rule 14 (instruccion -> breakstmt .)
    RETURN          reduce using rule 14 (instruccion -> breakstmt .)
    $end            reduce using rule 14 (instruccion -> breakstmt .)
    LLAVEDER        reduce using rule 14 (instruccion -> breakstmt .)


state 15

    (15) instruccion -> continuestmt .

    CONSOLE         reduce using rule 15 (instruccion -> continuestmt .)
    IF              reduce using rule 15 (instruccion -> continuestmt .)
    FOR             reduce using rule 15 (instruccion -> continuestmt .)
    SWITCH          reduce using rule 15 (instruccion -> continuestmt .)
    WHILE           reduce using rule 15 (instruccion -> continuestmt .)
    VAR             reduce using rule 15 (instruccion -> continuestmt .)
    CONST           reduce using rule 15 (instruccion -> continuestmt .)
    ID              reduce using rule 15 (instruccion -> continuestmt .)
    BREAK           reduce using rule 15 (instruccion -> continuestmt .)
    CONTINUE        reduce using rule 15 (instruccion -> continuestmt .)
    FUNC            reduce using rule 15 (instruccion -> continuestmt .)
    RETURN          reduce using rule 15 (instruccion -> continuestmt .)
    $end            reduce using rule 15 (instruccion -> continuestmt .)
    LLAVEDER        reduce using rule 15 (instruccion -> continuestmt .)


state 16

    (16) instruccion -> functionstmt .

    CONSOLE         reduce using rule 16 (instruccion -> functionstmt .)
    IF              reduce using rule 16 (instruccion -> functionstmt .)
    FOR             reduce using rule 16 (instruccion -> functionstmt .)
    SWITCH          reduce using rule 16 (instruccion -> functionstmt .)
    WHILE           reduce using rule 16 (instruccion -> functionstmt .)
    VAR             reduce using rule 16 (instruccion -> functionstmt .)
    CONST           reduce using rule 16 (instruccion -> functionstmt .)
    ID              reduce using rule 16 (instruccion -> functionstmt .)
    BREAK           reduce using rule 16 (instruccion -> functionstmt .)
    CONTINUE        reduce using rule 16 (instruccion -> functionstmt .)
    FUNC            reduce using rule 16 (instruccion -> functionstmt .)
    RETURN          reduce using rule 16 (instruccion -> functionstmt .)
    $end            reduce using rule 16 (instruccion -> functionstmt .)
    LLAVEDER        reduce using rule 16 (instruccion -> functionstmt .)


state 17

    (17) instruccion -> call .

    CONSOLE         reduce using rule 17 (instruccion -> call .)
    IF              reduce using rule 17 (instruccion -> call .)
    FOR             reduce using rule 17 (instruccion -> call .)
    SWITCH          reduce using rule 17 (instruccion -> call .)
    WHILE           reduce using rule 17 (instruccion -> call .)
    VAR             reduce using rule 17 (instruccion -> call .)
    CONST           reduce using rule 17 (instruccion -> call .)
    ID              reduce using rule 17 (instruccion -> call .)
    BREAK           reduce using rule 17 (instruccion -> call .)
    CONTINUE        reduce using rule 17 (instruccion -> call .)
    FUNC            reduce using rule 17 (instruccion -> call .)
    RETURN          reduce using rule 17 (instruccion -> call .)
    $end            reduce using rule 17 (instruccion -> call .)
    LLAVEDER        reduce using rule 17 (instruccion -> call .)


state 18

    (18) instruccion -> returnstmt .
